[gd_scene load_steps=14 format=3 uid="uid://byix6wkws661r"]

[ext_resource type="Script" path="res://scripts/TeaCup.gd" id="1_vurb0"]
[ext_resource type="PackedScene" uid="uid://b0cj6is5wudmt" path="res://scenes/label.tscn" id="2_p7y53"]
[ext_resource type="PackedScene" uid="uid://oa8ng568v3hi" path="res://models/teacup/teacup.gltf" id="2_yj16m"]
[ext_resource type="PackedScene" uid="uid://drw752s764j10" path="res://scenes/ui_flavor_profile.tscn" id="4_l0gjo"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vbe5n"]
height = 0.2
radius = 0.15

[sub_resource type="BoxMesh" id="BoxMesh_cxpk8"]
size = Vector3(0.25, 0.125, 0.25)

[sub_resource type="Curve" id="Curve_hhvx6"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, -360), 0.0, 0.0, 0, 0, Vector2(1, 360), 1008.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_lb06r"]
curve = SubResource("Curve_hhvx6")

[sub_resource type="Curve" id="Curve_d1aqa"]
_data = [Vector2(0, 0.505263), 0.0, 0.0, 0, 0, Vector2(1, 1), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_kbsmi"]
curve = SubResource("Curve_d1aqa")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vadoi"]
lifetime_randomness = 0.2
emission_shape = 6
emission_ring_axis = Vector3(0, 1, 0)
emission_ring_height = 0.0
emission_ring_radius = 0.05
emission_ring_inner_radius = 0.0
particle_flag_align_y = true
particle_flag_rotate_y = true
direction = Vector3(0, 1, 0)
gravity = Vector3(0, 0.02, 0)
initial_velocity_min = 0.03
initial_velocity_max = 0.03
angular_velocity_min = -0.1
angular_velocity_max = 0.1
angular_velocity_curve = SubResource("CurveTexture_lb06r")
scale_max = 1.2
scale_curve = SubResource("CurveTexture_kbsmi")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vc3ut"]
transparency = 1
albedo_color = Color(0.552941, 0.552941, 0.552941, 0.466667)

[sub_resource type="BoxMesh" id="BoxMesh_kw10j"]
material = SubResource("StandardMaterial3D_vc3ut")
size = Vector3(0.05, 0.05, 0.05)

[node name="TeaCup" type="Area3D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_vurb0")

[node name="Hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("CylinderShape3D_vbe5n")

[node name="Label" parent="." instance=ExtResource("2_p7y53")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.496248, 0)
visible = false

[node name="tea_cup" parent="." instance=ExtResource("2_yj16m")]
transform = Transform3D(-2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, 0, 0, 0)

[node name="tea_cup_liquid" type="MeshInstance3D" parent="tea_cup"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.21955, 0)
mesh = SubResource("BoxMesh_cxpk8")

[node name="ui_flavor_profile" parent="." instance=ExtResource("4_l0gjo")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.33638, 0)

[node name="Steam" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00334975, 0.120375, 0)
emitting = false
amount = 30
lifetime = 6.0
randomness = 0.02
visibility_aabb = AABB(-0.5, -0.5, -0.5, 1, 1, 1)
trail_lifetime = 0.01
process_material = SubResource("ParticleProcessMaterial_vadoi")
draw_pass_1 = SubResource("BoxMesh_kw10j")
